Tweak samba config

--- a/fileshare/fs/etc/samba/smb.conf
+++ b/fileshare/fs/etc/samba/smb.conf
@@ -3,6 +3,8 @@
    server string = File Shares
    server role = standalone server
    max log size = 50
+   socket options = TCP_NODELAY SO_RCVBUF=524288 SO_SNDBUF=524288 IPTOS_LOWDELAY 
+   name resolve order = bcast host lmhosts wins
 
 [shared]
    path = /mnt/shared
