--- a/fileshare/fs/etc/samba/smb.conf
+++ b/fileshare/fs/etc/samba/smb.conf
@@ -1,15 +1,62 @@
 [global]
-   workgroup = WORKGROUP
-   server string = File Shares
-   server role = standalone server
-   max log size = 50
-   socket options = TCP_NODELAY SO_RCVBUF=524288 SO_SNDBUF=524288 IPTOS_LOWDELAY 
-   name resolve order = bcast host lmhosts wins
+
+    # Identification
+    netbios name = Fileshare
+    workgroup = WORKGROUP
+    server string = Samba Server Version %v
+
+    # Network
+    name resolve order = bcast host lmhosts wins
+
+    # Protocol
+    disable netbios = no
+    wins support = yes
+    dns proxy = yes
+    domain master = yes
+    local master = yes
+    preferred master = yes
+    os level = 31
+
+    # Security
+    security = user
+    map to guest = Bad User
+    guest ok = yes
+    guest only = yes
+    guest account = nobody
+
+    # Printing
+    load printers = No
+    printing = bsd
+    printcap name = /dev/null
+    disable spoolss = Yes
+
+    # Files
+    directory mask = 0755
+    force create mode = 0644
+    force directory mode = 0755
+    case sensitive = True
+    default case = lower
+    preserve case = yes
+    short preserve case = yes
+
+    # Performance
+    socket options = TCP_NODELAY IPTOS_LOWDELAY SO_RCVBUF=131072 SO_SNDBUF=131072
+    read raw = yes
+    write raw = yes
+    server signing = no
+    strict locking = no
+    min receivefile size = 16384
+    use sendfile = Yes
+    aio read size = 16384
+    aio write size = 16384
+
+    # Logging
+    syslog = 0
+    max log size = 100
 
 [shared]
-   path = /mnt/shared
-   public = yes
-   only guest = yes
-   writable = yes
-   printable = no
+    path = /mnt/shared
+    writable = yes
+    browsable = yes
+    guest ok = yes
 
