Make samba friendlier to other operating systems

--- a/fileshare/fs/etc/samba/smb.conf
+++ b/fileshare/fs/etc/samba/smb.conf
@@ -24,6 +24,9 @@
     guest only = yes
     guest account = nobody
 
+    # Needed by some Windows installs
+    server signing = auto
+
     # Printing
     load printers = No
     printing = bsd
